# nexcore-codec

./: Cargo.toml  README.md
src/: base64.rs  hex.rs  lib.rs
